[package]
name = "bevy_rewind_input"
version = "0.1.0"
edition = "2024"

[features]
default = ["client", "server"]
client = ["bevy_replicon/client"]
server = ["bevy_replicon/server"]

[lints.rust]
warnings = "deny"

[lints.clippy]
# Bevy ECS queries are inherently complex and would fire this lint pervasively.
type_complexity = "allow"

[dependencies]
bevy = { path = "../../../third_party/bevy", default-features = false, features = ["bevy_log", "serialize"] }
bevy_replicon = { path = "../../../third_party/bevy_replicon", default-features = false }
bevy_rewind = { path = "../bevy_rewind" }
serde = "1.0"
arraydeque = "0.5"
arrayvec = { version = "0.7", default-features = false, features = ["serde"] }

[dev-dependencies]
mutants = "0.0.3"
